@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.8409 2004/12/22 21:26:31 adrianp Exp $
+$NetBSD: CHANGES,v 1.8410 2004/12/23 04:02:41 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -6475,3 +6475,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added postgrey-1.17 [kim 2004-12-22]
 	Updated simh to 3.3.0 [skrll 2004-12-22]
 	Updated xpdf to 3.00pl2 [adrianp 2004-12-22]
+	Updated mit-krb5 to 1.3.6 [jlam 2004-12-23]
